# RTK-test-task

./: pyproject.toml  readme.md
output/: rialcom_tariffs.xlsx
src/: config.py  main.py
src/core/: excel_writer.py  parser.py  tariff.py
