[project]
name = "rtk-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "laugh1tale"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
